Bug 553851 - [Passage] Switch baseline version
Fix deprecation for lic.jface

Signed-off-by: Alexander Fedorov <alexander.fedorov@arsysop.ru>